# danilodcn-blog

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: static.yml
docs/: index.en.md  index.md  index.pt.md
docs/assets/css/: extra.css
docs/blog/web/: como-a-web-funciona.md  index.md
docs/blog/web/como-a-web-funciona/: index.md
